shmuel 2025-04-17 10:44:36+03:00 - build 873

1. LuaFAR: support named groups in regex functions.

shmuel 2025-04-11 14:09:36+03:00 - build 872

1. LuaFAR: add functions and methods regex.tfind, regex.tfindW.

shmuel 2025-04-11 12:17:20+03:00 - build 871

1. LuaFAR: eliminate some compiler warnings.

shmuel 2025-03-21 12:38:18+02:00 - build 870

1. Add lf_ prefix to LuaFAR source files' names.

shmuel 2025-03-18 23:57:24+02:00 - build 869

1. LuaFAR: fix crash in recursively called GetOpenPanelInfoW due to hPanel==nullptr.

shmuel 2025-02-28 16:21:34+02:00 - build 868

1. Revert build 846.

shmuel 2025-01-31 19:49:10+02:00 - build 867

1. Revert builds 861-864 since the current far.Timer behavior is questionable.

shmuel 2025-01-29 20:14:04+02:00 - build 866

1. LuaFAR (generic plugin): "%FARPROFILE%\luafar_init.lua" is run by default.
   That can be prevented by defining a compilation flag -DNO_RUN_LUAFAR_INIT.

2. Plugin LuaMacro is built with this flag not defined.


MZK 2025-01-25 20:59:20-05:00 - build 865

1. gh-802: Macro API to report VMenu alignment state: Menu.HorizontalAlignment.

shmuel 2025-01-23 00:39:05+02:00 - build 864

1. LuaFAR: a temporary workaround in processing timer events.

shmuel 2025-01-22 20:36:47+02:00 - build 863

1. LuaFAR plugins: the timer queue is closed in DllMain/DLL_PROCESS_DETACH.
   Was: in ExitFARW.

shmuel 2025-01-21 21:18:49+02:00 - build 862

1. Force garbage collection on reloading macrofiles
   (required after build 861).

shmuel 2025-01-19 20:14:03+02:00 - build 861

1. LuaFAR: Timer objects are garbage-collected as any other full userdata.
     Was: "a timer object is garbage-collected only when its lua_State closes".
     Reason: reloading macros didn't release timers and their associated code.
     In some cases with frequent macros reloading it could lead to slowing down Far.

shmuel 2024-11-16 12:39:17+02:00 - build 860

1. Fix winapi.lua for arm64

shmuel 2024-11-11 17:26:22+02:00 - build 859
