@@ -1,3 +1,7 @@
+johnd0e 2025-04-30 23:54:19+02:00 - build 874
+
+1. LuaFAR: fix FarColor / UnderlineColor handling.
+
 shmuel 2025-04-17 10:44:36+03:00 - build 873
 
 1. LuaFAR: support named groups in regex functions.
